--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,4 +3,8 @@ project(wsn-based-smart-grid)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(main main.cpp Carrier.cpp CircuitBreaker.cpp State.cpp)
+add_executable(
+  main 
+  main.cpp 
+  Carrier.cpp CircuitBreaker.cpp State.cpp Percentage.cpp Power.cpp
+)
