--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,10 @@ project(wsn-based-smart-grid)
 set(CMAKE_CXX_STANDARD 20)
 
 add_executable(
-  main 
-  main.cpp 
-  Carrier.cpp CircuitBreaker.cpp State.cpp Percentage.cpp Power.cpp
+  main
+  main.cpp
+  Percentage.cpp Power.cpp
+  Carrier.cpp CircuitBreaker.cpp Grid.cpp
+  CarrierState.cpp State.cpp StateExplorer.cpp
+  utils.cpp
 )
