--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(sgrid)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_subdirectory(libsgrid)
+add_subdirectory(lib)
 
 add_executable(main app/main.cpp)
 target_link_libraries(main libsgrid)
