--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.20)
 set(CMAKE_CXX_STANDARD 20)
 
-add_library(libsgrid SHARED)
+add_library(libsgrid STATIC)
 target_include_directories(libsgrid PUBLIC .)
 target_sources(
     libsgrid PUBLIC
@@ -12,6 +12,7 @@ target_sources(
     sgrid/Grid.cpp
     sgrid/PowerSystemState.cpp
     sgrid/State.cpp
+    sgrid/Outcome.cpp
     sgrid/StateExplorer.cpp
     sgrid/utils.cpp
 )
