--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,13 +23,13 @@ add_subdirectory(lib)
 target_link_libraries(libsgrid fmt)
 
 
-enable_testing()
-add_executable(tests tests/correctness.cpp)
-target_link_libraries(tests GTest::gtest_main)
-target_link_libraries(tests libsgrid)
-target_link_libraries(tests fmt)
-include(GoogleTest)
-gtest_discover_tests(tests)
+# enable_testing()
+# add_executable(tests tests/correctness.cpp)
+# target_link_libraries(tests GTest::gtest_main)
+# target_link_libraries(tests libsgrid)
+# target_link_libraries(tests fmt)
+# include(GoogleTest)
+# gtest_discover_tests(tests)
 
 add_executable(main app/main.cpp)
 target_link_libraries(main libsgrid)
