--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,22 +2,10 @@ cmake_minimum_required(VERSION 3.20)
 project(sgrid)
 
 set(CMAKE_CXX_STANDARD 20)
-include(FetchContent)
 
-FetchContent_Declare(
-  googletest
-  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
-)
-# For Windows: Prevent overriding the parent project's compiler/linker settings
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-FetchContent_MakeAvailable(googletest)
-
-FetchContent_Declare(
-  fmt
-  GIT_REPOSITORY https://github.com/fmtlib/fmt.git
-  GIT_TAG 9.1.0
-)
-FetchContent_MakeAvailable(fmt)
+# find fmt, gtest packages and add them to the project
+find_package(fmt CONFIG REQUIRED)
+find_package(GTest CONFIG REQUIRED)
 
 add_subdirectory(lib)
 target_link_libraries(libsgrid fmt)
