add plog to cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,8 +19,16 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(fmt)
 
+FetchContent_Declare(
+  plog
+  GIT_REPOSITORY https://github.com/SergiusTheBest/plog.git
+  GIT_TAG 1.1.9
+)
+FetchContent_MakeAvailable(plog)
+
 add_subdirectory(lib)
 target_link_libraries(libsgrid fmt)
+target_link_libraries(libsgrid plog)
 
 
 # enable_testing()
